discussion/kv_engine/152471/152471_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Use boost::filesystem in cluster_framework

As a small step on the way to finally get away from cb::io::
and use a more widly tested framework (eventually std::filesystem)

Change-Id: I90a375e9b54d11f88a3f3f051c78a071160811cf

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-04-30 09:33:40.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-30 09:54:51.000000000
Message: 
Patch Set 4: Well-Formed-1

Permission denied to commit to restricted branch: 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30290/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/cluster_framework/cluster.cc:314:20:
error: no member named "io" in namespace "cb"; did you mean "boost::io"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30290/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35432/ : FAILURE

Compile error at ..\kv_engine\cluster_framework\cluster.cc(314): error C2039: "io": is not a member of "cb" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35432/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8640/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/cluster.cc:314:20: error: no member named "io" in namespace "cb"; did you mean "boost::io"? [clang-diagnostic-error]
    if (cleanup && cb::io::isDirectory(directory)) {
                   ^~~~~~
                   boost::io
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/tlm/deps/boost.exploded/include/boost/io/quoted.hpp:18:11: note: "boost::io" declared here
namespace io {
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/cluster.cc:314:28: error: no member named "isDirectory" in namespace "boost::io" [clang-diagnostic-error]
    if (cleanup && cb::io::isDirectory(directory)) {
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/cluster.cc:359:41: error: no member named "io" in namespace "cb"; did you mean "boost::io"? [clang-diagnostic-error]
                boost::filesystem::path(cb::io::getcwd()) / "cluster_";
                                        ^~~~~~
                                        boost::io
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/tlm/deps/boost.exploded/include/boost/io/quoted.hpp:18:11: note: "boost::io" declared here
namespace io {
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/cluster.cc:359:49: error: no member named "getcwd" in namespace "boost::io" [clang-diagnostic-error]
                boost::filesystem::path(cb::io::getcwd()) / "cluster_";
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/cluster.cc:360:21: error: no member named "io" in namespace "cb"; did you mean "boost::io"? [clang-diagnostic-error]
        directory = cb::io::mkdtemp(path.generic_string());
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/tlm/deps/boost.exploded/include/boost/io/quoted.hpp:18:11: note: "boost::io" declared here
namespace io {
          ^
note: this fix will not be applied because it overlaps with another fix
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/cluster.cc:360:25: error: no member named "mkdtemp" in namespace "boost::io"; did you mean simply "mkdtemp"? [clang-diagnostic-error]
        directory = cb::io::mkdtemp(path.generic_string());
                        ^
/usr/include/stdlib.h:728:14: note: "mkdtemp" declared here
extern char *mkdtemp (char *__template) __THROW __nonnull ((1)) __wur;
             ^
note: this fix will not be applied because it overlaps with another fix

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8640/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/cluster.cc:314:20:
error: no member named "io" in namespace "cb"; did you mean "boost::io"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8640/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10315/ : FAILURE

Compile error at [2021-04-30T09:38:46.455Z] ../kv_engine/cluster_framework/cluster.cc:314:24:
error: ‘cb::io’ has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10315/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9246/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10565/ : FAILURE

Compile error at [2021-04-30T09:42:44.642Z] ../kv_engine/cluster_framework/cluster.cc:314:20:
error: no member named "io" in namespace "cb"; did you mean "boost::io"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10565/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18118/ : FAILURE

Compile error at [2021-04-30T09:39:32.355Z] ../kv_engine/cluster_framework/cluster.cc:314:20:
error: no member named "io" in namespace "cb"; did you mean "boost::io"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18118/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10172/ : FAILURE

Compile error at [2021-04-30T09:42:25.414Z] ../kv_engine/cluster_framework/cluster.cc:314:24:
error: ‘cb::io’ has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10172/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7188/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
